renting-conditions for multi language integration

--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -112,7 +112,7 @@
 	          <div>
 	            <input type="checkbox" name="conditions_read" id="conditions_read">
 	              <span class="conditions_text">
-	           	    <%=t.new_booking.conditions_confirm('/renting_conditions')%>
+	           	    <%=t.new_booking.conditions_confirm(format_url_with_language('/renting_conditions'))%>
 	              </span>
 	            </input>
 	          </div>        
