removed booking_js dependency

--- a/views/booking_edit_pickupreturn.erb
+++ b/views/booking_edit_pickupreturn.erb
@@ -11,9 +11,12 @@
      </div>
 
      <div class="admin_content_wrapper">
+       <!-- Alert message -->
        <div class="alert">
          <%=t.booking_management_edit.description%>
        </div>
+
+       <!-- Reservation form pickup and return date, time and place -->
 
        <form id="reservation" class="top-margin" name="reservation">
        <div class="guiblock">
@@ -120,6 +123,8 @@
       	    </div>
           </div>
        </div>
+
+       <!-- Old and new situation -->
 
        <div id="item-selection" class="element-form-detail">
 
