backoffice new reservation show available stock + stock listing include stock plate

--- a/views/booking_items_management.erb
+++ b/views/booking_items_management.erb
@@ -69,7 +69,7 @@
          <%%= entity.stock_model %>
       </td>
       <td class="table-cell element-navigation-detail" rel="<%%= index %>">
-         <%%= entity.stock_name %>
+         <%%= entity.stock_plate %>
       </td>
       <td class="table-cell">
       </td>
