--- a/views/booking_management_new_reservation.erb
+++ b/views/booking_management_new_reservation.erb
@@ -171,7 +171,7 @@
            </td>
            <td class="table-cell centered_text"><img src="<%%= products[idx].photo %>"</td>
            <td class="table-cell centered_text"><%%=products[idx].name%></td>
-           <td class="table-cell centered_text"><%%=products[idx].busy%> / <%%=products[idx].stock%></td>
+           <td class="table-cell centered_text"><%%= (products[idx].stock - products[idx].busy) %> (<%%=products[idx].stock%>)</td>
            <td class="table-cell centered_text"><%%=new Number(products[idx].price).toFixed(2)%></td>
          </tr>
         <%% } %>
