--- a/views/reserva-online.js.erb
+++ b/views/reserva-online.js.erb
@@ -1345,7 +1345,8 @@ require(['jquery', 'YSDForms', 'YSDDateControl', 'ysdtemplate',
                         lastRowItems : total % numberOfColumns,
                         currentCol: current % numberOfColumns,
                         all_prices: bookingModel.all_prices,
-                        all_prices_base: bookingModel.all_prices_base
+                        all_prices_base: bookingModel.all_prices_base,
+                        current: current
                     });
                     current++;
                 }
