--- a/views/_booking_management_other_tab.erb
+++ b/views/_booking_management_other_tab.erb
@@ -1,7 +1,7 @@
             <div class="element_template">
               <div class="entity-field">
                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.free_access_id %></span>
-               <span class="entity-fieldvalue"><a href="/p/mybooking/<%%=entity.free_access_id%>" target="_blank">/p/mybooking/<%%=entity.free_access_id%></a></span>
+               <span class="entity-fieldvalue"><a href="<%=booking_front_end_prefix%>/reserva/<%%=entity.free_access_id%>" target="_blank"><%=booking_front_end_prefix%>/reserva/<%%=entity.free_access_id%></a></span>
               </div>
             </div>
             <div class="element_template">
