--- a/views/_reserva_online_summary_header.erb
+++ b/views/_reserva_online_summary_header.erb
@@ -2,7 +2,7 @@
 	        <fieldset id="fs_summary_item">
 	              <% if booking_reservation_starts_with == :shopcart %>
 	                <div style="overflow:hidden">
-	                  <div id="summary_dates" class="grid_5" style="padding-bottom:1000px; margin-bottom: -1000px; background:white">
+	                  <div id="summary_dates" class="grid_5" style="padding-bottom:1000px; margin-bottom: -1000px">
 	                  	<div class="left-margin smaller_text">
                           <%= partial :reserva_online_category_form, :locals => {:booking_item_family => booking_item_family} %>
                         </div>
