additional driver and external invoice number

--- a/views/_booking_management_additional_drivers.erb
+++ b/views/_booking_management_additional_drivers.erb
@@ -31,7 +31,32 @@
                       value="<%%=entity.additional_driver_1_document_id%>"/>
                     </span>
                   </div>
-              </div>               
+              </div>
+                <div class="element_template">
+                  <div class="entity-field">
+                    <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_origin_country %></span>
+                    <span class="entity-fieldvalue">
+                       <input type="text" maxlength="80" size="25" name="additional_driver_1_origin_country" id="additional_driver_1_origin_country"
+                              value="<%%=entity.additional_driver_1_origin_country%>"/>
+                    </span>
+                  </div>
+                </div>
+                <div class="element_template">
+                  <div class="entity-field">
+                    <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id_date %></span>
+                    <span class="entity-fieldvalue">
+                        <input type="text" name="additional_driver_1_document_id_date" id="additional_driver_1_document_id_date" class="date_control" size="15" maxlength="10"/>
+                     </span>
+                  </div>
+                </div>
+                <div class="element_template">
+                  <div class="entity-field">
+                    <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id_expiration_date %></span>
+                    <span class="entity-fieldvalue">
+                        <input type="text" name="additional_driver_1_document_id_expiration_date" id="additional_driver_1_document_id_expiration_date" class="date_control" size="15" maxlength="10"/>
+                     </span>
+                  </div>
+                </div>
               <div class="element_template">
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
@@ -48,7 +73,24 @@
                         <input type="text" name="additional_driver_1_driving_license_date" id="additional_driver_1_driving_license_date" class="date_control" size="15" maxlength="10"/>
                      </span>
                   </div>
-              </div> 
+              </div>
+                <div class="element_template">
+                  <div class="entity-field">
+                    <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_driving_license_expiration_date %></span>
+                    <span class="entity-fieldvalue">
+                     <input type="text" name="additional_driver_1_driving_license_expiration_date" id="additional_driver_1_driving_license_expiration_date" class="date_control" size="15" maxlength="10"/>
+                  </span>
+                  </div>
+                </div>
+                <div class="element_template">
+                  <div class="entity-field">
+                    <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_country %></span>
+                    <span class="entity-fieldvalue">
+                    <input type="text" maxlength="50" size="25" name="additional_driver_1_driving_license_country" id="additional_driver_1_driving_license_country"
+                           value="<%%=entity.additional_driver_1_driving_license_country%>"/>
+                  </span>
+                  </div>
+                </div>
               <% end %>          
           </div>
           <div class="grid_6">
@@ -82,7 +124,34 @@
                       value="<%%=entity.additional_driver_2_document_id%>"/>
                     </span>
                   </div>
-              </div>                  
+              </div>
+
+                <div class="element_template">
+                  <div class="entity-field">
+                    <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_origin_country %></span>
+                    <span class="entity-fieldvalue">
+                       <input type="text" maxlength="80" size="25" name="additional_driver_2_origin_country" id="additional_driver_2_origin_country"
+                              value="<%%=entity.additional_driver_2_origin_country%>"/>
+                    </span>
+                  </div>
+                </div>
+                <div class="element_template">
+                  <div class="entity-field">
+                    <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id_date %></span>
+                    <span class="entity-fieldvalue">
+                        <input type="text" name="additional_driver_2_document_id_date" id="additional_driver_2_document_id_date" class="date_control" size="15" maxlength="10"/>
+                     </span>
+                  </div>
+                </div>
+                <div class="element_template">
+                  <div class="entity-field">
+                    <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id_expiration_date %></span>
+                    <span class="entity-fieldvalue">
+                        <input type="text" name="additional_driver_2_document_id_expiration_date" id="additional_driver_2_document_id_expiration_date" class="date_control" size="15" maxlength="10"/>
+                     </span>
+                  </div>
+                </div>
+
               <div class="element_template">
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
@@ -99,7 +168,25 @@
                         <input type="text" name="additional_driver_2_driving_license_date" id="additional_driver_2_driving_license_date" class="date_control" size="15" maxlength="10"/>
                      </span>
                   </div>
-              </div> 
+              </div>
+                <div class="element_template">
+                  <div class="entity-field">
+                    <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_driving_license_expiration_date %></span>
+                    <span class="entity-fieldvalue">
+                     <input type="text" name="additional_driver_2_driving_license_expiration_date" id="additional_driver_2_driving_license_expiration_date" class="date_control" size="15" maxlength="10"/>
+                  </span>
+                  </div>
+                </div>
+                <div class="element_template">
+                  <div class="entity-field">
+                    <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_country %></span>
+                    <span class="entity-fieldvalue">
+                    <input type="text" maxlength="50" size="25" name="additional_driver_1_driving_license_country" id="additional_driver_2_driving_license_country"
+                           value="<%%=entity.additional_driver_2_driving_license_country%>"/>
+                  </span>
+                  </div>
+                </div>
+
               <% end %>
 
           </div>
