--- a/views/_booking_management_flight.erb
+++ b/views/_booking_management_flight.erb
@@ -32,7 +32,7 @@
                 </div>            
         </div>
         <div class="grid_6">
-               <div class="more_contrast_text top-margin" style="text-decoration:underline; margin-left:5px"><%=t.booking_management.form.driver_address_title%></div> 
+               <div class="more_contrast_text top-margin" style="text-decoration:underline; margin-left:5px"><%=t.booking_management.form.destination_address_title%></div>
                 <div class="element_template">
                   <div class="entity-field">
                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_address_street %></span>
