--- a/views/_booking_management_driver.erb
+++ b/views/_booking_management_driver.erb
@@ -30,7 +30,32 @@
                       value="<%%=entity.driver_document_id%>"/>                       
                     </span>
                   </div>
-              </div>              
+              </div>
+              <div class="element_template">
+                <div class="entity-field">
+                  <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_origin_country %></span>
+                  <span class="entity-fieldvalue">
+                       <input type="text" maxlength="80" size="25" name="driver_origin_country" id="driver_origin_country"
+                              value="<%%=entity.driver_origin_country%>"/>
+                    </span>
+                </div>
+              </div>
+              <div class="element_template">
+                <div class="entity-field">
+                  <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id_date %></span>
+                  <span class="entity-fieldvalue">
+                        <input type="text" name="driver_document_id_date" id="driver_document_id_date" class="date_control" size="15" maxlength="10"/>
+                     </span>
+                </div>
+              </div>
+              <div class="element_template">
+                <div class="entity-field">
+                  <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id_expiration_date %></span>
+                  <span class="entity-fieldvalue">
+                        <input type="text" name="driver_document_id_expiration_date" id="driver_document_id_expiration_date" class="date_control" size="15" maxlength="10"/>
+                     </span>
+                </div>
+              </div>
               <% if booking_item_family.driver_license %> 
               <div class="element_template">
                   <div class="entity-field">
@@ -48,15 +73,23 @@
                         <input type="text" name="driver_driving_license_date" id="driver_driving_license_date" class="date_control" size="15" maxlength="10"/>
                      </span>
                   </div>
-              </div> 
+              </div>
               <div class="element_template">
-                   <div class="entity-field">
-                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_country %></span>
-                     <span class="entity-fieldvalue">
-                       <input type="text" maxlength="50" size="25" name="driver_driving_license_country" id="driver_driving_license_country"
-                      value="<%%=entity.driver_driving_license_country%>"/>                       
-                     </span>
-                   </div>
+                <div class="entity-field">
+                  <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_driving_license_expiration_date %></span>
+                   <span class="entity-fieldvalue">
+                     <input type="text" name="driver_driving_license_expiration_date" id="driver_driving_license_expiration_date" class="date_control" size="15" maxlength="10"/>
+                  </span>
+                </div>
+              </div>
+              <div class="element_template">
+                <div class="entity-field">
+                  <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_country %></span>
+                  <span class="entity-fieldvalue">
+                    <input type="text" maxlength="50" size="25" name="driver_driving_license_country" id="driver_driving_license_country"
+                      value="<%%=entity.driver_driving_license_country%>"/>
+                  </span>
+                </div>
               </div>
               <% end %>
             </div>
