--- a/views/_booking_management_other_tab.erb
+++ b/views/_booking_management_other_tab.erb
@@ -1,3 +1,5 @@
+      <div class="container_12">
+        <div class="grid_6">
             <div class="element_template">
               <div class="entity-field">
                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.free_access_id %></span>
@@ -41,4 +43,27 @@
                 <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.user_agent_os %></span>
                 <span class="entity-fieldvalue"><%%= entity.user_agent_platform %></span>
               </div>
-            </div>  
+            </div>
+        </div>
+        <div class="grid_6">
+          <form name="additional_data" style="border:1px solid #EEE">
+            <input type="hidden" name="id" value="<%%=entity.id%>"/>
+
+            <div class="element_template">
+              <div class="entity-field">
+                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.external_invoice_number %></span>
+                <span class="entity-fieldvalue">
+                       <input type="text" maxlength="40" size="25" name="external_invoice_number" id="external_invoice_number"
+                              value="<%%=entity.external_invoice_number%>"/>
+                </span>
+              </div>
+            </div>
+
+            <div class="navigation-bar bottom-margin">
+              <div class="navigation-bar-crud-buttons right-float right-margin">
+                <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
