--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -196,27 +196,20 @@
         </div>
 
      </div>  
-        
-     <div class="container_12">
-        <div class="grid_6">
-          <%= partial :booking_management_customer %>
-        </div>
-        <div class="grid_6">
-           <div class="left-margin bottom-margin" style="border:1px solid #EEE">
-              <%= partial :booking_management_comments %>
-              <%= partial :booking_management_notes %> 
-           </div>     
-        </div>
 
-     </div>
- 
      <div class="container_12">
           <div class="grid_12">
             <%= partial :booking_management_detail %>
           </div>
      </div>
 
-      <ul id="content_tabs" class="no-border no-background"class="no-border no-background">  
+      <ul id="content_tabs" class="no-border no-background"class="no-border no-background">
+          <li class="no-border no-background top-space" style="border: none; background: none">
+            <a name="customer_tab" href="#customer_tab"><%=t.booking_management.form.customer_tab%></a>
+          </li>
+          <li class="no-border no-background top-space" style="border: none; background: none">
+            <a name="comments_tab" href="#customer_tab"><%=t.booking_management.form.comments_tab%></a>
+          </li>
           <% if booking_item_family.driver %>
           <li class="no-border no-background top-space" style="border:none; backgrond:none">
             <a name="driver_tab" href="#driver_tab"><%=t.booking_management.form.driver_tab%></a>
@@ -253,6 +246,26 @@
       </ul>
 
       <div id="content">
+
+         <div id="customer_tab" class="top-margin bottom-margin">
+           <div class="container_12">
+             <div class="grid_6">
+               <%= partial :booking_management_customer %>
+             </div>
+           </div>
+         </div>
+         <div id="comments_tab" class="top-margin bottom-margin">
+           <div class="container_12">
+             <div class="grid_6">
+               <%= partial :booking_management_comments %>
+             </div>
+             <div class="grid_6">
+               <div class="left-margin bottom-margin">
+                 <%= partial :booking_management_notes %>
+               </div>
+             </div>
+           </div>
+         </div>
 
          <% if booking_item_family.driver %>
          <div id="driver_tab"  class="top-margin bottom-margin">
@@ -342,6 +355,6 @@
 
 </script>
 
-<%= partial :booking_management_edit %>
+<%= partial :booking_management_edit, locals: {booking_item_family: booking_item_family}%>
 <%= element_form_extension %>
 <%= element_action_extension %>
