menu correction tryton integration

--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -105,6 +105,7 @@
         <% end %>   
       </ul>    
    </li>
+   <% end %>
     <% if defined?YsdPluginTryton %>
     <li class='<%if ['/admin/tryton/setup',
                      '/admin/integration/data',
