--- a/views/booking_edit_pickupreturn.js.erb
+++ b/views/booking_edit_pickupreturn.js.erb
@@ -76,7 +76,7 @@
                'item_unit_cost':new Number('<%=item.item_unit_cost%>'), 'item_cost':new Number('<%=item.item_cost%>'),
                'product_deposit_unit_cost': new Number('<%=item.product_deposit_unit_cost%>'),
                'product_deposit_cost': new Number('<%=item.product_deposit_cost%>'),
-               'quantity':new Number('<%=item.quantity%>'')
+               'quantity':new Number('<%=item.quantity%>')
               },      
             <% end %>                    
           ],
